<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recipes">

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.pizzaplanner.ui.recipes.RecipesFragment"
        android:label="@string/nav_recipes"
        tools:layout="@layout/fragment_recipes">
        <action
            android:id="@+id/action_recipes_to_recipe_detail"
            app:destination="@id/navigation_recipe_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe_detail"
        android:name="com.pizzaplanner.ui.recipes.RecipeDetailFragment"
        android:label="Recipe Detail"
        tools:layout="@layout/fragment_recipe_detail">
        <argument
            android:name="recipe"
            app:argType="com.pizzaplanner.data.models.Recipe" />
        <action
            android:id="@+id/action_recipe_detail_to_planning_with_recipe"
            app:destination="@id/navigation_planning" />
    </fragment>

    <fragment
        android:id="@+id/navigation_planning"
        android:name="com.pizzaplanner.ui.planning.PlanningFragment"
        android:label="@string/nav_planning"
        tools:layout="@layout/fragment_planning" />

    <fragment
        android:id="@+id/navigation_active"
        android:name="com.pizzaplanner.ui.active.ActiveFragment"
        android:label="@string/nav_active"
        tools:layout="@layout/fragment_active_list">
        <action
            android:id="@+id/action_active_to_active_recipe_detail"
            app:destination="@id/navigation_active_recipe_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_active_recipe_detail"
        android:name="com.pizzaplanner.ui.active.ActiveRecipeDetailFragment"
        android:label="Active Recipe Detail"
        tools:layout="@layout/fragment_active">
        <argument
            android:name="recipeId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.pizzaplanner.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
